# enterprise-knowledge-assistant

./: .dockerignore  .env.example  .env.production.example  .gitignore  Dockerfile  LICENSE  Makefile  PROJECT_SUMMARY.txt  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/api/: deps.py  exception_handlers.py
app/api/v1/: router.py
app/api/v1/endpoints/: documents.py  health.py  query.py
app/core/: config.py  constants.py  exceptions.py  logging.py  middleware.py
app/db/: migrations.py  models.py  session.py
app/embeddings/: base.py  openai_embedder.py
app/ingestion/: chunker.py  pdf_parser.py  text_cleaner.py
app/llm/: openai_client.py  prompt_builder.py
app/repositories/: chunk_repository.py  document_repository.py
app/retrieval/: retriever.py
app/schemas/: documents.py  query.py
app/services/: document_service.py  index_service.py  rag_service.py
app/storage/: file_store.py
app/utils/: hashing.py
app/vectorstore/: base.py  faiss_store.py
enterprise_knowledge_assistant.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: .env.example  Dockerfile  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: AdminPanel.tsx  DocumentList.tsx  DocumentUpload.tsx  Layout.tsx  QueryPanel.tsx  SourcesPanel.tsx
frontend/src/lib/: workspace.ts
frontend/src/types/: api.ts
scripts/: rebuild_index.py
tests/api/: test_health.py  test_root.py
tests/services/: test_chunker.py
