[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enterprise-knowledge-assistant"
version = "0.1.0"
description = "Production-style RAG assistant for enterprise documents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic-settings>=2.3.0",
    "orjson>=3.10.0",
    "python-json-logger>=2.0.7",
    "httpx>=0.27.0",
    "tenacity>=8.3.0",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0.30",
    "alembic>=1.13.1",
    "pypdf>=4.2.0",
    "openai>=1.35.0",
    "faiss-cpu>=1.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.8",
    "ruff>=0.5.0",
    "black>=24.4.2"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"